[EME] Fix casts and sizes printing https://bugs.webkit.org/show_bug.cgi?id=218171

Reviewed by Philippe Normand.

Fix size printing and casts in CDMThunder and ClearKey.

* platform/graphics/gstreamer/eme/CDMProxyClearKey.cpp:
(WebCore::CDMProxyClearKey::cencDecryptSubsampled):
* platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::ParsedResponseMessage::ParsedResponseMessage):
(WebCore::CDMInstanceSessionThunder::requestLicense):
(WebCore::CDMInstanceSessionThunder::updateLicense):
(WebCore::CDMInstanceSessionThunder::loadSession):
(WebCore::CDMInstanceSessionThunder::removeSessionData):


Canonical link: https://commits.webkit.org/230879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268975 268f45cc-cd09-0410-ab3c-d52691b4dbfc